# whatsapp-ai-bot

./: .env  .env.example  .gitignore  .replit  DEPLOYMENT.md  GITHUB_SETUP.md  QUICK_GITHUB_GUIDE.md  README.md  analytics.py  app.py  bot.py  config.py  file_processor.py  gemini_service.py  models.py  push_to_github.sh  pyproject.toml  replit.md  requirements.txt
commands/: __init__.py  admin.py  ai.py  base.py  group.py  help.py  start.py
instance/: whatsapp_bot.db
static/: dashboard.js
templates/: base.html  dashboard.html
utils/: __init__.py  decorators.py  helpers.py
